src/parser.y
%{
#include <stdio.h>
#include <stdlib.h>

#define YYERROR_VERBOSE 1

int yylex(void);
void yyerror(const char *s);

extern char *yytoken_value;
extern int yylineno;
void inicializa_pilha(void);
%}

%define parse.trace
%locations

%token TOKEN_IDENTIFICADOR TOKEN_INTEIRO TOKEN_FLOAT TOKEN_STRING
%token TOKEN_PALAVRA_CHAVE_IF TOKEN_PALAVRA_CHAVE_ELSE TOKEN_PALAVRA_CHAVE_ELIF
%token TOKEN_PALAVRA_CHAVE_WHILE TOKEN_PALAVRA_CHAVE_FOR TOKEN_PALAVRA_CHAVE_DEF TOKEN_PALAVRA_CHAVE_RETURN TOKEN_PALAVRA_CHAVE_IN
%token TOKEN_OPERADOR_IGUAL TOKEN_OPERADOR_DIFERENTE TOKEN_OPERADOR_MENOR_IGUAL TOKEN_OPERADOR_MAIOR_IGUAL
%token TOKEN_OPERADOR_MENOR TOKEN_OPERADOR_MAIOR
%token TOKEN_OPERADOR_ATRIBUICAO
%token TOKEN_OPERADOR_MAIS TOKEN_OPERADOR_MENOS TOKEN_OPERADOR_MULTIPLICACAO TOKEN_OPERADOR_DIVISAO
%token TOKEN_DELIMITADOR_DOIS_PONTOS TOKEN_DELIMITADOR_VIRGULA
%token TOKEN_DELIMITADOR_ABRE_PARENTESES TOKEN_DELIMITADOR_FECHA_PARENTESES
%token TOKEN_DELIMITADOR_ABRE_CHAVES TOKEN_DELIMITADOR_FECHA_CHAVES
%token TOKEN_DELIMITADOR_ABRE_COLCHETES TOKEN_DELIMITADOR_FECHA_COLCHETES
%token TOKEN_DESCONHECIDO
%token TOKEN_NEWLINE TOKEN_INDENT TOKEN_DEDENT

%left TOKEN_OPERADOR_MAIS TOKEN_OPERADOR_MENOS
%left TOKEN_OPERADOR_MULTIPLICACAO TOKEN_OPERADOR_DIVISAO
%right TOKEN_OPERADOR_ATRIBUICAO
%nonassoc TOKEN_PALAVRA_CHAVE_ELSE TOKEN_PALAVRA_CHAVE_ELIF

%%

programa:
      /* vazio */
    | programa comando
    ;

comando:
      atribuicao TOKEN_NEWLINE
    | chamada_funcao_stmt TOKEN_NEWLINE
    | return_stmt TOKEN_NEWLINE
    | if_stmt
    | while_stmt
    | funcao
    | TOKEN_NEWLINE
    ;

lista_comandos:
      comando
    | lista_comandos comando
    ;

atribuicao:
      lista_identificadores TOKEN_OPERADOR_ATRIBUICAO lista_expressoes
    ;

lista_identificadores:
      TOKEN_IDENTIFICADOR
    | lista_identificadores TOKEN_DELIMITADOR_VIRGULA TOKEN_IDENTIFICADOR
    ;

lista_expressoes:
      expressao
    | lista_expressoes TOKEN_DELIMITADOR_VIRGULA expressao
    ;

lista_argumentos:
      /* vazio */
    | expressao
    | lista_argumentos TOKEN_DELIMITADOR_VIRGULA expressao
    ;

chamada_funcao_stmt:
      TOKEN_IDENTIFICADOR TOKEN_DELIMITADOR_ABRE_PARENTESES lista_argumentos TOKEN_DELIMITADOR_FECHA_PARENTESES
    ;

chamada_funcao:
      TOKEN_INTEIRO
    | TOKEN_FLOAT
    | TOKEN_STRING
    | TOKEN_IDENTIFICADOR
    | TOKEN_IDENTIFICADOR TOKEN_DELIMITADOR_ABRE_PARENTESES lista_argumentos TOKEN_DELIMITADOR_FECHA_PARENTESES
    | TOKEN_DELIMITADOR_ABRE_PARENTESES expressao TOKEN_DELIMITADOR_FECHA_PARENTESES
    ;

expressao:
      expressao TOKEN_OPERADOR_MAIS expressao
    | expressao TOKEN_OPERADOR_MENOS expressao
    | expressao TOKEN_OPERADOR_MULTIPLICACAO expressao
    | expressao TOKEN_OPERADOR_DIVISAO expressao
    | '-' expressao %prec TOKEN_OPERADOR_MENOS
    | chamada_funcao
    ;

bloco:
      TOKEN_NEWLINE TOKEN_INDENT lista_comandos TOKEN_DEDENT
    ;

funcao:
      TOKEN_PALAVRA_CHAVE_DEF TOKEN_IDENTIFICADOR TOKEN_DELIMITADOR_ABRE_PARENTESES lista_argumentos TOKEN_DELIMITADOR_FECHA_PARENTESES TOKEN_DELIMITADOR_DOIS_PONTOS bloco
    ;

return_stmt:
      TOKEN_PALAVRA_CHAVE_RETURN lista_expressoes_opt
    ;

lista_expressoes_opt:
      /* vazio */
    | lista_expressoes
    ;

if_stmt:
      TOKEN_PALAVRA_CHAVE_IF expressao TOKEN_DELIMITADOR_DOIS_PONTOS bloco
    | TOKEN_PALAVRA_CHAVE_IF expressao TOKEN_DELIMITADOR_DOIS_PONTOS bloco TOKEN_PALAVRA_CHAVE_ELSE TOKEN_DELIMITADOR_DOIS_PONTOS bloco
    ;

while_stmt:
      TOKEN_PALAVRA_CHAVE_WHILE expressao TOKEN_DELIMITADOR_DOIS_PONTOS bloco
    ;

%%

void yyerror(const char *s) {
  fprintf(stderr, "ERRO (linha %d): %s próximo de '%s'\n",
          yylineno, s, yytoken_value ? yytoken_value : "");
}

int main(void) {
  printf("Iniciando parser...\n");
  inicializa_pilha(); // Inicializa a pilha de indentação do lexer
  int result = yyparse();
  if (result == 0) {
      printf("Parsing concluído com sucesso!\n");
  } else {
      printf("Parsing interrompido por erro.\n");
  }
  return result;
}
